--- a/BOOKSHELF/templates/admin_index.html
+++ b/BOOKSHELF/templates/admin_index.html
@@ -27,12 +27,13 @@
                     <li><a href="{% url 'admin_order_management'%}">Order View</a></li>
                     <li><a href="../adindex" class="page">Home</a></li>
                     <li><a href="../adbookview" >Product View</a></li>
+                    <li><a href="{% url 'stock_dashboard'%}">stock dashboard</a></li>
                     {% if user.is_authenticated %}
                     <li><a href="../logout">Sign Out</a></li>
                     </ul>
                     {% endif %}
             </div></div>
-        <div class="nav2">
+        <!-- <div class="nav2">
             <div class="list2">
              
                     <a href="../mlmchild " >Children's Books</a>
@@ -42,7 +43,7 @@
                     <a href="../mlmebook">EBooks</a>
                     
         </div>
-        </div>
+        </div> -->
 
         <div class="form">
             <form action="../adindex" method="POST" enctype="multipart/form-data">
