--- a/BOOKSHELF/static/css/book_admin_index.css
+++ b/BOOKSHELF/static/css/book_admin_index.css
@@ -1,238 +1,219 @@
-*{
-    margin:0px;
+* {
+    margin: 0px;
 }
 
-.nav{
-    height:80px;
-    width:cover;
-    display:flex;
-    background-color:chartreuse;
-    justify-content:space-evenly;
-    align-items:center;
+/* ------------------ DEFAULT STYLES ------------------ */
+.nav {
+    width: 100%;
+    display: flex;
+    background-color: chartreuse;
+    justify-content: space-evenly;
+    align-items: center;
+    flex-wrap: wrap;
+    padding: 10px 0;
 }
-.logo{
-    height:50px;
-    width:150px;;
+
+.logo {
+    height: 50px;
+    width: 150px;
     display: flex;
     justify-content: center;
     align-items: center;
     font-size: 20px;
     font-weight: bold;
-    font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
-    position:absolute;
-    left:30px;
+    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+    position: relative;
+    margin-bottom: 10px;
+}
 
+.list {
+    width: 40%;
 }
-.list{
-    width:40%;
-}
-.list ul{
-    height:80px;
-    width:100%;
-    display:flex;
-    justify-content:space-around;
-    align-items:center;
-   
-   
-}
-.list a{
-    display:flex;
-    justify-content:flex-start;
-    text-decoration:none;
-    color:black;
-}
-.list a:hover{
-    transform:translateY(-3px);
-    color:blueviolet;
-}
-.list .page{
-    color:rgb(214, 4, 4);
-    font-weight:800;
-}
-.search input{
-    height:10px;
-    width:300px;
-    display:flex;
-    justify-content: center;
+
+.list ul {
+    height: 80px;
+    width: 100%;
+    display: flex;
+    justify-content: space-around;
     align-items: center;
-    position:relative;
-    left:120px;
-    padding:10px;
-    top:15px;
-    border-radius:10px;
 }
-.search img{
-    height:30px;
-    width:30px;
-    transform:translate(411px,-17px);
-    background-color:yellow;
-    background-size: 40px,40px;
+
+.list a {
+    display: flex;
+    justify-content: flex-start;
+    text-decoration: none;
+    color: black;
+}
+
+.list a:hover {
+    transform: translateY(-3px);
+    color: blueviolet;
+}
+
+.page {
+    font-weight: 800;
+}
+
+.search {
+    display: flex;
+    align-items: center;
+    gap: 10px;
+}
+
+.search input {
+    height: 10px;
+    width: 300px;
+    padding: 10px;
     border-radius: 10px;
-
-}
-.list2{
-    height:60px;
-    width:50%;
-    display:flex;
-    justify-content: space-around;
-    align-items:center;
-    
-    /* transform:translate(120px); */
-   
-
-}
-.nav2 a{
-    text-decoration:none;
-    color:black;
-}
-.nav2{
-    height:50px;
-    width:cover;
-    display:flex;
-    background-color:rgb(174, 255, 208);
-    justify-content:space-evenly;
-    align-items:center;
-}
-.nav2 a:hover{
-   transform:translateY(-3px);
-   color:blueviolet;
-    
 }
 
-.form{
-    position:absolute;
-    top:100px;
-    left:300px;
-    height:800px;
-    width:700px;
-    display:flex;
-    justify-content:center;
-    /* background-color:rgb(250, 239, 230); */
-    /* border:3px solid black; */
-
-}
-.upload{
-    margin-top:50px;
-    margin-left:20%;
-    margin:20%;
-    height:300px;
-    width:300px;
-    background-color:black;
-    background-position:center;
-    border-radius:50px;
-
-
-}
-.upload img{
-    height:150px;
-    width:150px;
-    background-color:yellow;
-    background-size: 40px,40px;
+.search img {
+    height: 30px;
+    width: 30px;
+    background-color: yellow;
+    background-size: 40px 40px;
     border-radius: 10px;
-    position:relative;
-    left:70px;
-    top:50px;
 }
-.upload h3{
-    position:relative;
-    top:90px;
-    left:80px;
-    color:white;
-}
-.form input{
-height:30px;
-width:300px;
-border-radius:10px;
-}
-table{
-    position:absolute;
-  
-    left:100px;
-}
-.btn{
- 
-   
-    border-radius:10px;
-    
-   
-   
-}
-.btn p{
-    position:relative;
-    left:170px;
-    height:30px;
-    width:130px;
-    background-color:rgb(147, 147, 245);
-    font-size:20px;
-}
-.btn a{
-    
-    text-decoration:none;
-    color:black;
-    
 
-}
-.list2{
-    height:60px;
-    width:50%;
-    display:flex;
+.list2 {
+    height: 60px;
+    width: 50%;
+    display: flex;
     justify-content: space-around;
-    align-items:center;
-    
-    /* transform:translate(120px); */
-   
-
-}
-.nav2 a{
-    text-decoration:none;
-    color:black;
-}
-.nav2{
-    height:50px;
-    width:cover;
-    display:flex;
-    background-color:rgb(174, 255, 208);
-    justify-content:space-evenly;
-    align-items:center;
-}
-.nav2 a:hover{
-    text-decoration-line:underline;
-    
-}
-.upload h2{
-    transform:translate(0px,-40px);
-    text-align:center;
+    align-items: center;
 }
 
+.nav2 {
+    height: 50px;
+    width: 100%;
+    display: flex;
+    background-color: rgb(174, 255, 208);
+    justify-content: space-evenly;
+    align-items: center;
+}
+
+.nav2 a {
+    text-decoration: none;
+    color: black;
+}
+
+.nav2 a:hover {
+    text-decoration-line: underline;
+    color: blueviolet;
+}
+
+.form {
+    position: absolute;
+    top: 100px;
+    left: 300px;
+    height: 800px;
+    width: 700px;
+    display: flex;
+    justify-content: center;
+}
+
+.upload {
+    margin: 20%;
+    height: 300px;
+    width: 300px;
+    background-color: black;
+    background-position: center;
+    border-radius: 50px;
+}
+
+.upload img {
+    height: 150px;
+    width: 150px;
+    background-color: yellow;
+    background-size: 40px 40px;
+    border-radius: 10px;
+    position: relative;
+    left: 70px;
+    top: 50px;
+}
+
+.upload h3 {
+    position: relative;
+    top: 90px;
+    left: 80px;
+    color: white;
+}
+
+.upload h2 {
+    transform: translate(0px, -40px);
+    text-align: center;
+}
+
+.form input {
+    height: 30px;
+    width: 300px;
+    border-radius: 10px;
+}
+
+table {
+    position: absolute;
+    left: 100px;
+}
+
+.btn {
+    border-radius: 10px;
+}
+
+.btn p {
+    position: relative;
+    left: 170px;
+    height: 30px;
+    width: 130px;
+    background-color: rgb(147, 147, 245);
+    font-size: 20px;
+}
+
+.btn a {
+    text-decoration: none;
+    color: black;
+}
+
+/* ------------------ RESPONSIVE STYLES ------------------ */
+
+/* Tablets and small laptops */
 @media (max-width: 1024px) {
-    .nav, .nav2 {
+    .nav {
         flex-direction: column;
-        height: auto;
-        padding: 10px;
+        align-items: center;
+        padding: 15px 0;
     }
 
     .logo {
-        position: static;
         margin-bottom: 10px;
+        text-align: center;
+    }
+
+    .list {
+        width: 100%;
     }
 
     .list ul {
         flex-direction: column;
-        width: 100%;
         align-items: center;
+        gap: 10px;
+        padding: 10px 0;
+        height: auto;
+    }
+
+    .list a {
+        justify-content: center;
+        width: 100%;
     }
 
     .search {
-        position: static;
-        margin: 10px 0;
+        width: 100%;
         flex-direction: column;
         align-items: center;
+        margin: 10px 0;
     }
 
     .search input {
         width: 70%;
-        left: 0;
-        top: 0;
     }
 
     .search img {
@@ -244,6 +225,13 @@ table{
         width: 100%;
         flex-wrap: wrap;
         justify-content: center;
+        gap: 10px;
+    }
+
+    .nav2 {
+        flex-direction: column;
+        height: auto;
+        padding: 10px;
         gap: 10px;
     }
 
@@ -262,7 +250,6 @@ table{
         width: 250px;
         height: 250px;
         margin-bottom: 20px;
-        margin-right:40%;
     }
 
     .upload img {
@@ -293,6 +280,7 @@ table{
     }
 }
 
+/* Mobile phones */
 @media (max-width: 768px) {
     .form {
         width: 95%;
@@ -322,18 +310,3 @@ table{
     }
 }
 
-@media (min-width: 1024px) {
-    .upload{
-        /* margin-right:80%; */
-        margin-left:-30%;
-    
-    }
-    .form table{
-         margin-left:-10%;
-    }
-
-   
-  .search input{
-   margin-bottom:25px;
-  }
-}
