--- a/BOOKSHELF/static/css/bookdetails.css
+++ b/BOOKSHELF/static/css/bookdetails.css
@@ -62,7 +62,7 @@ html, body, .main {
 }
 
 .list .page {
-    color: rgb(214, 4, 4);
+    color: black;
     font-weight: 800;
 }
 
@@ -105,13 +105,15 @@ html, body, .main {
 .cart {
     display: flex;
     align-items: center;
-    background-color: aqua;
-    padding: 5px 12px;
-    border-radius: 8px;
-    cursor: pointer;
-    gap: 8px;
-    font-size: 16px;
+    gap: 10px;
+    justify-content: center;
+    flex-shrink: 0;
+    height:50px;
+    width:200px;
+    border:1px solid black;
+    background-color:aqua;
 }
+
 
 .cart img {
     height: 28px;
@@ -168,12 +170,15 @@ html, body, .main {
     padding: 20px;
     border-radius: 10px;
     box-shadow: 0 2px 10px rgba(0,0,0,0.1);
+    display:flex;
+    flex-direction:column;
 }
 
 .details table {
     width: 100%;
     border-collapse: collapse;
     font-size: 15px;
+    margin-bottom:3%;
 }
 
 .details td {
