--- a/BOOKSHELF/templates/ad_update2.html
+++ b/BOOKSHELF/templates/ad_update2.html
@@ -28,13 +28,14 @@
                     <li><a href="{% url 'admin_order_management'%}">Order View</a></li>
                     <li><a href="../adindex">Home</a></li>
                     <li><a href="../adbookview">Product View</a></li>
+                    <li><a href="{% url 'stock_dashboard'%}">stock dashboard</a></li>
                     <li><a href="" class="page">update2</a></li>
                     {% if user.is_authenticated %}
                     <li><a href="../logout">Sign Out</a></li>
                     </ul>
                     {% endif %}
             </div></div>
-        <div class="nav2">
+        <!-- <div class="nav2">
             <div class="list2">
                 <select>
                     <option selected>Select Language</option>
@@ -48,7 +49,7 @@
                     <a href="../admlmbiography">Biography</a>
                     <a href="../admlmebook">EBooks</a>
                     
-        </div></div>
+        </div></div> -->
 
         <div class="form">
      <!-- update -->
@@ -140,7 +141,7 @@
                 </td>
                 <td>
                     
-                        <input type="number" name="stock" placeholder="enter count of book">
+                        <input type="number" name="stock" placeholder="enter count of book" value="{{data.stock}}" class="s4">
               
                 </td>
                 </tr>
